--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<header id="header" class="alt">
 						 <span class="logo"><img src="images/Designer.jpeg" alt="" /></span> 
 						<h1 class="rainbow">DHANUSH KUMAR SELVARAJ KUMAR</h1>
-						<p>COMPUTER SCIENCE STUDENT @ UNIVERSITY OF HOUSTON</p>
+						<p>COMPUTER SCIENCE STUDENT @ THE UNIVERSITY OF HOUSTON</p>
 					</header>
 
 				<!-- Nav -->
@@ -490,6 +490,7 @@ function updateProject() {
         img.alt = project.title;
 		img.style.width = '950';
 		img.style.height = '534';
+		img.title = 'CLICK ON ME!!!'
         link.appendChild(img);
 
         videoContainer.appendChild(link);
